# rift

./: .env.docker.example  .env.example  .gitignore  Cargo.toml  deno.json  docker-compose.override.yml  docker-compose.yml  justfile
.github/workflows/: build.yml  check.yml
.zed/: settings.json
api/: Cargo.toml  Dockerfile  deno.json
api/entity/: Cargo.toml
api/entity/src/: lib.rs  messages.rs  users.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m1_create_users_table.rs  m20250520_213906_create_directory_table.rs  m20250520_222700_seed.rs  m2_create_directory_table.rs  m3_create_messages_table.rs  m99_seed.rs
api/src/: auth.rs  db.rs  main.rs  routes.rs  websocket.rs
api/src/entity/: directory.rs  messages.rs  mod.rs  users.rs
api/src/websocket/: directory.rs  messages.rs  messaging.rs  mod.rs  users.rs
app/: .dockerignore  Dockerfile  app.config.ts  biome.json  deno.json  package.json  set-env.ts  tsconfig.json
app/src/: apiUtils.ts  app.tsx  colorUtils.ts  entity.d.ts  entry-server.tsx  global.d.ts  storageUtils.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Api.tsx  Auth.tsx  Avatar.tsx  Button.tsx  Directory.tsx  Input.tsx  Members.tsx  Nav.tsx  NotificationService.tsx  ProtectedRoute.tsx  SegmentGroup.tsx  Spiltter.tsx  Tree.tsx  WebSocket.tsx  WindowControls.tsx
app/src/routes/: Index.tsx  (+4 more)
apps/desktop/: deno.json  index.html  vite.config.ts
apps/web/: app.config.ts  deno.json
(+8 files in other folders)
