[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "migration" }
tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
sea-orm = { version = "1.1.11", features = [
	"sqlx-postgres",
	"runtime-tokio-native-tls",
	"macros",
] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
tower-http = { version = "0.6.6", features = ["cors"] }
# reqwest = { version = "0.12.19", default-features = false, features = [
# 	"rustls-tls",
# ] }
